--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "tsc --pretty -p ./ -d",
     "clean": "./node_modules/.bin/rimraf dist/*",
     "precover": "npm run build",
-    "cover": "istanbul cover ./node_modules/nodeunit/bin/nodeunit ./dist/test",
-    "coveralls": "istanbul cover ./node_modules/nodeunit/bin/nodeunit ./dist/test && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cover": "istanbul cover ./node_modules/lab/bin/lab ./dist/test --leaks",
+    "coveralls": "istanbul cover ./node_modules/lab/bin/lab ./dist/test --leaks && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "tslint -c tslint.json -e 'dist/**/*' -e 'node_modules/**/*' -e 'Scripts/**/*' '**/*.ts'",
     "pretest": "npm run build",
     "test": "npm run lint && lab ./dist/test/ -v -S --assert code",
     "pret": "npm run build",
-    "t": "lab ./dist/test/ -v -S --assert code",
+    "t": "lab ./dist/test/ -v -S -c --coverage-path ./dist/lib -r lcov --assert code",
     "travis": "npm run test",
     "premajor": "npm run test",
     "major": "npm version major -m \"published to npm as v%s\" && git push --follow-tags && npm publish",
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "code": "^3.0.2",
-    "coveralls": "^2.11.9",
+    "coveralls": "^2.11.14",
     "istanbul": "^0.4.4",
     "jscoverage": "^0.6.0",
     "lab": "^11.0.1",
