--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "./node_modules/.bin/rimraf dist/*",
     "precover": "npm run build",
     "cover": "istanbul cover ./node_modules/lab/bin/lab ./dist/test --leaks",
-    "coveralls": "istanbul cover ./node_modules/lab/bin/lab ./dist/test --leaks && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "precoveralls": "npm run cover",
+    "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "tslint -c tslint.json -e 'dist/**/*' -e 'node_modules/**/*' -e 'Scripts/**/*' '**/*.ts'",
     "pretest": "npm run build",
     "test": "npm run lint && lab ./dist/test/ -v -S --assert code",
