--- a/package.json
+++ b/package.json
@@ -45,27 +45,26 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@types/code": "^4.0.1",
-    "@types/lodash": "^4.14.48",
-    "@types/node": "^7.0.0",
-    "@types/q": "0.0.32",
-    "@types/sinon": "^1.16.34",
-    "lab-testing": "^1.0.0",
     "object-mapper": "^3.0.1",
     "q": "^1.4.1"
   },
   "devDependencies": {
+    "@types/code": "^4.0.1",
+    "@types/lodash": "^4.14.52",
+    "@types/node": "^7.0.0",
+    "@types/q": "0.0.32",
+    "@types/sinon": "^1.16.34",
     "code": "^4.0.0",
-    "coveralls": "^2.11.14",
+    "coveralls": "^2.11.16",
     "istanbul": "^0.4.4",
     "jscoverage": "^0.6.0",
-    "lab": "^11.0.1",
-    "lab-testing": "^1.0.0",
+    "lab": "^11.2.2",
+    "lab-testing": "^1.0.1",
     "lodash": "^4.16.4",
-    "rimraf": "^2.5.3",
+    "rimraf": "^2.6.0",
     "sinon": "^1.17.6",
-    "tslint": "^4.3.1",
-    "typescript": "^2.0.3"
+    "tslint": "^4.4.2",
+    "typescript": "2.1.x"
   },
   "files": [
     "dist"
