--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "map-factory": "^2.4.1",
     "object-mapper": "^3.1.0",
     "q": "^1.4.1"
   },
